--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -4,7 +4,8 @@
       "module": "commonjs",
       "baseUrl": ".",
       "paths": {
-        "@/*": ["./*"]
+        "@/*": ["./*"],
+        "@agent/*": ["src/agent/*"]
       }
     },
     "include": [
